Amazon Web Service S3 Bucket Code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,14 @@
-
+<link rel="stylesheet" type="text/css" href="/css/index.css">
 
 <center>
-	<h1>S3 Bucket Demo</h1>
-	
+<div id="awsdiv">
+	<h1>(AMAZON WEB SERVICES)</h1>
+	<h2>(AWS) S3 BUCKET DEMO</h2>
+	<h5>B Y - S H U B H A M</h5>
 	<form method="post" action="/upload" enctype="multipart/form-data">
-		<input type="file" name="file">
+		<p><input type="file" name="file"></p>
 		<input type="submit" name="submit" value="Upload">
 	</form>
 
+</div>
 </center>
